--- a/public/css/general.css
+++ b/public/css/general.css
@@ -75,12 +75,12 @@ nav .bottom
 h1 {font-size: 1.6em;}
 h2 {font-size: 1.2em;}
 
-#onglet_accueil::before {background-image:url(../icons/home.png);}
+#onglet_accueil::before {background-image:url(../../public/icons/home.png);}
 #onglet_entreprise::before {background-image:url(../icons/entreprise.png);}
 #onglet_stagiaire::before {background-image:url(../icons/stage.png);}
 #onglet_inscrire::before {background-image:url(../icons/inscrire.png);}
-#onglet_aide::before {background-image:url(../icons/aide.png);}
-#onglet_deconnection::before {background-image:url(../public/icons/deconnection.png);}
+#onglet_aide::before {background-image:url(/public/icons/aide.png);}
+#onglet_deconnexion::before {background-image:url(/public/icons/deconnexion.png);}
 
 #icon_droite::before {background-image:url(../icons/droite.png);}
 #icon_gauche::before {background-image:url(../icons/gauche.png);}
