--- a/src/View/includes/nav.twig
+++ b/src/View/includes/nav.twig
@@ -1,8 +1,3 @@
-<html>
-<head>
-    <link rel="stylesheet" href="public/css/general.css">
-</head>
-<body>
 <nav>
     <a href="#" id="onglet_accueil" class="actif">
         <span>Accueil</span>
@@ -19,12 +14,7 @@
     <a href="#" id="onglet_aide">
         <span>Aide</span>
     </a>
-    <a href="#" id="onglet_deconnection">
+    <a href="#" id="onglet_deconnexion">
         <span>Déconnexion</span>
     </a>
-
-
-
 </nav>
-</body>
-</html>
