panneau de navigation fonctionnel

--- a/src/View/aide.twig
+++ b/src/View/aide.twig
@@ -1,1 +1,6 @@
-<?php
+{% extends "includes/base.twig" %}
+{% block contenu %}
+    <div id="contenu">
+        <h1>Bienvenue sur l'aide !</h1>
+    </div>
+{% endblock %}
