--- a/src/View/accueil.twig
+++ b/src/View/accueil.twig
@@ -1,4 +1,6 @@
 {% extends "includes/base.twig" %}
 {% block contenu %}
-<h1>Bienvenue sur notre site !</h1>
+    <div id="contenu">
+        <h1>Bienvenue sur notre site !</h1>
+    </div>
 {% endblock %}
