--- a/src/View/includes/base.twig
+++ b/src/View/includes/base.twig
@@ -1,30 +1,12 @@
 <html>
 <head>
-    <link rel="stylesheet" href="/public/css/general.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:63342/ISI1-WEB-Projet-Final/public/css/general.css">
+    <script type="text/javascript" src="../../../public/js/script.js"></script>
 </head>
 <body>
-<nav>
-    <a href="#" id="onglet_accueil" class="actif">
-        <span>Accueil</span>
-    </a>
-    <a href="#" id="onglet_entreprise">
-        <span>Entreprise</span>
-    </a>
-    <a href="#" id="onglet_stagiaire">
-        <span>Stagiaire</span>
-    </a>
-    <a href="#" id="onglet_inscrire">
-        <span>Inscription</span>
-    </a>
-    <a href="#" id="onglet_aide">
-        <span>Aide</span>
-    </a>
-    <a href="#" id="onglet_deconnexion">
-        <span>Déconnexion</span>
-    </a>
-</nav>
-<div class="">
-    {% block contenu %}{% endblock %}
-</div>
+    {% include 'includes/nav.twig' %}
+    <div id="corps">
+        {% block contenu %}{% endblock %}
+    </div>
 </body>
 </html>
