--- a/src/View/accueil.twig
+++ b/src/View/accueil.twig
@@ -1,6 +1,8 @@
 {% extends "includes/base.twig" %}
 {% block contenu %}
-    <div id="contenu">
-        <h1>Bienvenue sur notre site !</h1>
-    </div>
+    <header>
+        <h1>Stage BTS</h1>
+        <hr>
+        <p>Bienvenue sur la page de gestion des stages</p>
+    </header>
 {% endblock %}
