--- a/src/View/includes/base.twig
+++ b/src/View/includes/base.twig
@@ -1,7 +1,11 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="http://localhost:63342/ISI1-WEB-Projet-Final/public/css/general.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:63342/ISI1-WEB-Projet-Final/public/css/tableau.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:63342/ISI1-WEB-Projet-Final/public/css/bouton.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:63342/ISI1-WEB-Projet-Final/public/css/formulaire.css">
     <script type="text/javascript" src="../../../public/js/script.js"></script>
+    <title>Projet WEB 3A</title>
 </head>
 <body>
     {% include 'includes/nav.twig' %}
