--- a/public/css/formulaire.css
+++ b/public/css/formulaire.css
@@ -3,14 +3,12 @@ fieldset
     border: none;
     margin: 0px;
     padding: 0px;
-    margin-top: 10px;
-    margin-bottom: 20px;
 }
 
 input, label, select, textarea
 {
-    margin-top: 2px;
-    margin-bottom: 2px;
+    margin-top: 0px;
+    margin-bottom: 0px;
     padding: 3px 6px 3px 6px;
 }
 
@@ -27,7 +25,7 @@ input, select, textarea
     width: 100%;
 }
 
-input[type=submit], input[type=button]
+input[type=submit], input[type=button], input[type="reset"]
 {
     min-width: 0px;
     width: 150px;
@@ -36,6 +34,7 @@ input[type=submit], input[type=button]
 textarea
 {
     min-height: 60px;
+    resize: vertical;
 }
 
 
