ajout de la modification d'entreprise

--- a/src/View/entreprise/index.twig
+++ b/src/View/entreprise/index.twig
@@ -92,7 +92,11 @@
                         {% endif %}
                     </td>
                     <td style="display: none">{{ entreprise.niveau }}</td>
-                    <td>{{ entreprise.specialite }}</td>
+                    <td>
+                        {% for spe in entreprise.specialite %}
+                            {{ spe }}<br>
+                        {% endfor %}
+                    </td>
                 </tr>
             {% endfor %}
             </tbody>
