--- a/src/View/stagiaire/rechercherStagiaire.twig
+++ b/src/View/stagiaire/rechercherStagiaire.twig
@@ -2,10 +2,10 @@
 {% block contenu %}
     <article id="contenu">
         <header>
-            <h1>Recherche d'entreprise</h1>
+            <h1>Recherche de Stagiaire</h1>
         </header>
         <hr>
-        <form action="index.php?page=entreprise" method="post">
+        <form action="index.php?page=stagiaire" method="post">
             <fieldset>
                 <label class="center message" for="nom">Nom de l'entreprise :</label>
                 <input type="text" id="nom" name="nom" placeholder="Entrez un nom">
