--- a/public/css/bouton.css
+++ b/public/css/bouton.css
@@ -1,5 +1,4 @@
-.large_bouton_operation a::before, .bouton_operation a, .fake_bouton
-{
+.large_bouton_operation a::before, .bouton_operation a, .fake_bouton {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 30px 30px;
@@ -9,70 +8,77 @@
     height: 30px;
     display: inline-block;
     white-space: nowrap;
+    transition: transform 0.3s ease, background-size 0.3s ease;
 }
 
-.icon_ajouter::before {background-image:url(../icons/ajouter.png);}
-.icon_rechercher::before {background-image:url(../icons/rechercher.png);}
-.icon_modifier {background-image:url(../icons/modifier.png);}
-.icon_supprimer {background-image:url(../icons/supprimer.png);}
-.icon_voir {background-image:url(../icons/voir.png);}
-.icon_inscrire {background-image:url(../icons/inscrire.png);}
-.icon_website {background-image:url(../icons/lien.png);}
 
-input[type="submit"], input[type="button"], input[type="reset"], .large_bouton_operation a, .bouton_operation a, .fake_bouton
-{
+.icon_ajouter::before { background-image: url(../icons/ajouter.png); }
+.icon_rechercher::before { background-image: url(../icons/rechercher.png); }
+.icon_modifier { background-image: url(../icons/modifier.png); }
+.icon_supprimer { background-image: url(../icons/supprimer.png); }
+.icon_voir { background-image: url(../icons/voir.png); }
+.icon_inscrire { background-image: url(../icons/inscrire.png); }
+.icon_website { background-image: url(../icons/lien.png); }
+
+input[type="submit"], input[type="button"], input[type="reset"], .large_bouton_operation a, .bouton_operation a, .fake_bouton {
     background-color: #183080;
     border: 1px solid #0A1840;
-    border-radius: 3px;
+    border-radius: 5px;
     color: white;
-    padding: 8px;
-    padding-left: 35px;
-    padding-right: 35px;
+    padding: 8px 8px;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 1px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
 }
 
-input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hover, .large_bouton_operation a:hover, .bouton_operation a:hover, .fake_bouton:hover
-{
+input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hover, .large_bouton_operation a:hover, .bouton_operation a:hover, .fake_bouton:hover {
     background-color: #3040A0;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
 
-.bouton_operation a, .fake_bouton
-{
-    margin: 0px;
-    margin-left: 2px;
-    margin-right: 2px;
+.bouton_operation a, .fake_bouton {
+    margin: 0px 2px;
     width: 25px;
     height: 25px;
     padding: 5px;
+    transition: transform 0.2s ease;
 }
 
-.fake_bouton
-{
+.bouton_operation a:hover, .fake_bouton:hover {
+    transform: scale(1.1);
+}
+
+.fake_bouton {
     background-size: 20px 20px;
     width: 18px;
     height: 18px;
     padding: 3px;
-    margin-top: -9px;
-    margin-bottom: -9px;
+    margin: -9px 2px;
 }
 
-.large_bouton_operation a::before
-{
+.large_bouton_operation a::before {
     margin-right: 15px;
 }
 
-.large_bouton_operation a
-{
+.large_bouton_operation a {
     text-decoration: none;
-    margin: 0px;
-    margin-right: 10px;
-    margin-bottom: 5px;
-    padding: 10px;
-    padding-left: 25px;
-    padding-right: 25px;
+    margin: 0px 10px 5px 0px;
+    padding: 10px 25px;
     display: inline-block;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.large_bouton_operation
-{
-    margin: 20px 2px 20px 2px;
+.large_bouton_operation {
+    margin: 20px 2px;
+}
+
+.large_bouton_operation a:hover {
+    background-color: #4050B0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
