--- a/src/View/accueil.twig
+++ b/src/View/accueil.twig
@@ -3,6 +3,7 @@
     <header>
         <h1>Stage BTS</h1>
         <hr>
+        <h2>Vous êtes un {{ role }}</h2>
         <p>Bienvenue sur la page de gestion des stages</p>
     </header>
 {% endblock %}
