--- a/src/View/entreprise/index.twig
+++ b/src/View/entreprise/index.twig
@@ -73,9 +73,11 @@
                     <td>
                         <div class="bouton_operation center">
                             <a href="?page=entreprise&action=voir&id={{ entreprise.num_entreprise }}" class="icon_voir"></a>
-                            <a href="#" class="icon_inscrire"></a>
+                            {% if role == 'professeur' %}
+                                <a href="?page=inscription&action=inscire&id={{ entreprise.num_entreprise }}" class="icon_inscrire"></a>
                             <a href="?page=entreprise&action=modifier&id={{ entreprise.num_entreprise }}" class="icon_modifier"></a>
                             <a href="?page=entreprise&action=supprimer&id={{ entreprise.num_entreprise }}" class="icon_supprimer" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette entreprise ?')"></a>
+                            {% endif %}
                         </div>
                     </td>
                     <td>{{ entreprise.raison_sociale }}</td>
