--- a/src/View/entreprise/rechercherEntreprise.twig
+++ b/src/View/entreprise/rechercherEntreprise.twig
@@ -11,7 +11,7 @@
                 <input type="text" id="nom" name="nom" placeholder="Entrez un nom">
                 <br><br>
                 <label class="center message" for="ville">Ville de l'entreprise :</label>
-                <input type="text" name="ville" placeholder="Entrez une ville">
+                <input type="text" id="ville" name="ville" placeholder="Entrez une ville">
                 <br><br>
                 <label class="center message" for="specialite">Spécialité de l'entreprise :</label>
                 <select name="specialite" id="specialite">
