--- a/src/View/includes/base.twig
+++ b/src/View/includes/base.twig
@@ -1,9 +1,9 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="http://localhost:63342/ISI1-WEB-Projet-Final/public/css/general.css">
-    <link rel="stylesheet" type="text/css" href="http://localhost:63342/ISI1-WEB-Projet-Final/public/css/tableau.css">
-    <link rel="stylesheet" type="text/css" href="http://localhost:63342/ISI1-WEB-Projet-Final/public/css/bouton.css">
-    <link rel="stylesheet" type="text/css" href="http://localhost:63342/ISI1-WEB-Projet-Final/public/css/formulaire.css">
+    <link rel="stylesheet" type="text/css" href="{{base_url}}/css/general.css">
+    <link rel="stylesheet" type="text/css" href="{{base_url}}/css/tableau.css">
+    <link rel="stylesheet" type="text/css" href="{{base_url}}/css/bouton.css">
+    <link rel="stylesheet" type="text/css" href="{{base_url}}/css/formulaire.css">
     <script type="text/javascript" src="../../../public/js/script.js"></script>
     <title>Projet WEB 3A</title>
 </head>
