--- a/src/View/aide.twig
+++ b/src/View/aide.twig
@@ -1,11 +1,77 @@
 {% extends "includes/base.twig" %}
 {% block contenu %}
     <header>
-        <h1>Stage BTS</h1>
+        <h1>Aide</h1>
+        <p>Bienvenue sur la FAQ</p>
         <hr>
-        <p>Bienvenue sur la page de gestion des stages</p>
     </header>
     <article id="contenu">
-        <h1>A compléter !!!</h1>
+        <h1>Entreprise</h1>
+
+        <h2>Comment rechercher une entreprise ?</h2>
+        <p>Si vous voulez rechercher une entreprise, vous devez aller sur la page " Entreprise ", pour cliquer sur
+            le bouton " Rechercher une entreprise ". Il vous est alors fourni trois critères. Utilisez-les afin de
+            pouvoir trouver les entreprises qui correspondent à vos choix.
+        </p>
+
+        <h2>Comment ajouter une entreprise ?</h2>
+        <p>Pour ajouter une entreprise, rendez-vous sur la page " Entreprise ", où vous devez cliquer sur le
+            bouton " Ajouter une entreprise ". Vous devrez ensuite ajouter les informations concernant
+            l’entreprise. Toutes les informations ne sont pas obligatoires, mais il est conseillé d’en fournir un
+            maximum pour renseigner les futurs stagiaires sur les entreprises référencées.
+        </p>
+
+        <h2>Comment afficher ou enlever une information concernant l'entreprise ?</h2>
+        <p>En allant sur la page " Entreprise ", vous pouvez voir les entreprises déjà référencées. Vous pouvez
+            alors remarquer que certaines informations concernant l'entreprise sont absentes. Vous pouvez
+            cependant les afficher grâce à la liste déroulante : choisissez l'information que vous voulez afficher
+            puis cliquez sur le bouton " Ajouter ". Si vous voulez enlever une information, il vous suffit de cliquer
+            sur le moins situé à l'entête de la colonne représentant l'information concerné.
+        </p>
+
+        <h2>N'y a t-il pas une autre solution pour voir ces informations ?</h2>
+        <p>Bien sûr, vous pouvez cliquer sur l’icône <a class="icon_voir fake_bouton"></a> pour voir toutes les informations concernant l'entreprise
+            que vous avez sélectionné.
+        </p>
+
+        <h2>Comment puis-je supprimer une entreprise ?</h2>
+        <p>Rien de plus simple, il vous suffit de cliquer sur l'icône <a class="icon_supprimer fake_bouton"></a> qui se situe sur la deuxième colonne "
+            Opération ".
+            <span class="important">Faites bien attention de ne pas vous tromper de ligne !</span>
+        </p>
+
+        <h2>Et si je veux modifier une information fausse ?</h2>
+        <p>Cliquez sur l’icône <a class="icon_modifier fake_bouton"></a>, puis changer le(s) information(s) que vous voulez. Vous pourrez par la même
+            occasion renseigner une information manquante si vous en avez la possibilité.
+        </p>
+
+        <h2>Comment rechercher un stagiaire ?</h2>
+        <p>Tout d'abord, dirigez-vous sur la page " Stagiaire ". Cliquez ensuite sur le bouton " Rechercher un
+            stagiaire existant ". Vous aurez alors quatre listes déroulantes. Vous pourrez alors choisir, pour
+            chaque champ, l'information voulue.
+        </p>
+
+        <h2>Comment inscrire un étudiant à un stage ?</h2>
+        <p>Pour cela, vous devez vous rendre sur la page " Inscription ". Ensuite, vous devrez remplir un
+            formulaire contenant diverses informations concernant le stage de l’étudiant, comme par exemple
+            l’entreprise ou encore le professeur qui s’occupera du stage de l’étudiant. Vous pouvez aussi le faire à
+            partir de la page " Entreprise " : cliquez sur la poignée de main située sur la première colonne "
+            Opération ", et le formulaire d'inscription s'affichera avec le nom de l'entreprise pré-rentré.
+        </p>
+
+        <h2>Comment peut-on voir les informations des stagiaires ?</h2>
+        <p>Sur la liste qui s'affiche sur la page " Stagiaire ", ou en cliquant sur l’icône <a class="icon_voir fake_bouton"></a>.
+        </p>
+
+        <h2>Comment peut-on supprimer un stagiaire ? </h2>
+        <p>Comme pour une entreprise : cliquez sur l'icône <a class="icon_supprimer fake_bouton"></a> présente sur la page " Stagiaire ".</p>
+
+        <h2>Comment peut-on modifier un stage ? </h2>
+        <p>Allez sur la page " Stagiaire ", puis cliquez sur l'icône <a class="icon_modifier fake_bouton"></a>.
+            <span class="important">Attention ce bouton permet de modifier seulement les informations relatives à un stage et non pas à un étudiant</span>
+        </p>
+
+        <h2>Et maintenant, comment peut-on modifier les informations d'un étudiant ? </h2>
+        <p>Allez sur la page " Stagiaire ", puis cliquez sur l'icône <a class="icon_voir fake_bouton"></a>. Ensuite cliquez sur l'icône <a class="icon_modifier fake_bouton"></a> en dessous du nom de l'étudiant.</p>
     </article>
 {% endblock %}
