--- a/src/View/includes/base.twig
+++ b/src/View/includes/base.twig
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="{{base_url}}/public/css/tableau.css">
     <link rel="stylesheet" type="text/css" href="{{base_url}}/public/css/bouton.css">
     <link rel="stylesheet" type="text/css" href="{{base_url}}/public/css/formulaire.css">
-    <script type="text/javascript" src="../../../public/js/script.js"></script>
+    <script type="text/javascript" src="{{base_url}}/public/js/script.js"></script>
     <title>Projet WEB 3A</title>
 </head>
 <body>
